Test cases for DuelServiceImpl